--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     position:relative;
   }
 
-  /* ✅ Watermark (marca d'água) discreta e no lugar certo */
+  /* ✅ marca d’água discreta */
   .watermark{
     position:fixed;
     top:88px;
@@ -135,12 +135,12 @@
     box-shadow: var(--shadow2);
   }
 
-  /* ✅ Layout geral: 1 coluna */
+  /* ✅ Layout: 1 coluna */
   main{
     flex:1;
     min-height:0;
     display:grid;
-    grid-template-columns: 1fr; /* ✅ sem lateral */
+    grid-template-columns: 1fr;  /* ✅ sem lateral */
     gap:18px;
     padding:18px 22px 22px;
     height:calc(100vh - 84px);
@@ -238,7 +238,9 @@
 
   textarea{
     width:100%;
-    height:260px; /* ✅ conforto e ainda zero scroll */
+    height:calc(100vh - 360px); /* ✅ garante espaço pro botão e header */
+    min-height:200px;
+    max-height:340px;
     resize:none;
     border-radius: var(--r22);
     border:1px solid rgba(255,255,255,.18);
@@ -257,7 +259,7 @@
     box-shadow: 0 0 0 3px rgba(23,227,166,.18), inset 0 0 0 1px rgba(0,0,0,.25);
   }
 
-  /* ✅ BOTÃO EVIDENTE */
+  /* ✅ Botão não some: sempre visível */
   .btn{
     border:none;
     cursor:pointer;
@@ -291,7 +293,7 @@
   .tech-hidden{ display:none !important; }
 
   @media (max-width: 980px){
-    textarea{ height:220px; }
+    textarea{ max-height:320px; }
     .brand img{ width:160px; max-height:46px; }
   }
 </style>
@@ -312,7 +314,7 @@
 
       <div class="hdr-right">
         <div class="pill">Modo Profissional</div>
-        <div class="pill">Janela Central</div>
+        <div class="pill">Popup Central</div>
       </div>
     </header>
 
@@ -339,10 +341,8 @@
               <code>Rua</code>
             </div>
 
-            <!-- ✅ Campo principal -->
             <textarea id="entrada_rapida" rows="11"></textarea>
 
-            <!-- ✅ Botão bem visível -->
             <button class="btn" onclick="extrairEAbrir()">
               EXTRAIR AUTOMATICAMENTE E ABRIR LAUDO
             </button>
@@ -353,7 +353,7 @@
             </div>
           </div>
 
-          <!-- ✅ Campos técnicos (existem mas invisíveis) -->
+          <!-- ✅ Campos técnicos existem, mas invisíveis -->
           <div class="tech-hidden">
             <input id="paciente" type="text"/>
             <input id="exame" type="text"/>
@@ -389,11 +389,13 @@ function maskDate(v){
   if(d.length >= 3) return d.replace(/(\d{2})(\d+)/,'$1/$2');
   return d;
 }
+
 function maskCep(v){
   let c = onlyDigits(v).slice(0,8);
   if(c.length > 5) return c.replace(/(\d{5})(\d+)/,'$1-$2');
   return c;
 }
+
 function maskPhone(v){
   let t = onlyDigits(v).slice(0,11);
   if(t.length === 11){
@@ -404,6 +406,7 @@ function maskPhone(v){
   }
   return v;
 }
+
 function setVal(id,val){
   const el = document.getElementById(id);
   if(el) el.value = val;
@@ -498,10 +501,8 @@ function abrirLaudo(){
   const laudoPath = "laudo.html";
   const url = laudoPath + "?" + params.toString();
 
-  /* ✅ janela no meio e menor */
   const w = 900;
   const h = 680;
-
   const left = Math.max(0, (window.screen.width - w) / 2);
   const top = Math.max(0, (window.screen.height - h) / 2);
 
@@ -510,12 +511,10 @@ function abrirLaudo(){
     `resizable=yes,scrollbars=yes,status=no,toolbar=no,menubar=no,location=no`;
 
   const popup = window.open(url, "LAUDO_POPUP", specs);
-
   if(!popup){
-    window.location.href = url; // fallback se popup bloqueado
+    window.location.href = url;
     return;
   }
-
   popup.focus();
 }
 
