--- a/laudo.html
+++ b/laudo.html
@@ -9,6 +9,8 @@
   :root{
     --blue:#336699;
     --panel:#eef2f7;
+    --shadow:0 18px 40px rgba(0,0,0,.18);
+    --radius:16px;
   }
 
   body{
@@ -18,44 +20,30 @@
     font-family: Arial, sans-serif;
   }
 
-  /* ===== CONTROLES ===== */
-  .controles{
-    position: static;
-    margin-top: 18px;
-    background:#fff;
-    border:1px solid #000;
-    padding:14px;
-    width: 100%;
-    max-width: 420px;
-    margin-left:auto;
-    margin-right:auto;
-    border-radius: 10px;
-  }
-  .btn{
-    width:100%;
-    padding:12px;
-    font-weight:900;
-    cursor:pointer;
-    border:none;
-    border-radius:6px;
-  }
-  .btn-print{ background:#28a745;color:#fff; }
-  .btn-word{ margin-top:10px;background:#1f6feb;color:#fff; }
-  .btn-clear{ margin-top:10px;background:#eee; }
-
-  /* ===== FOLHA (TELA) ===== */
+  /* ============================
+     ✅ LAYOUT PREMIUM (SÓ TELA)
+     ============================ */
   .folha{
     width: 210mm;
     min-height: 297mm;
     margin:auto;
     background:#fff;
-    box-shadow: 0 0 10px rgba(0,0,0,.12);
+    box-shadow: var(--shadow);
     box-sizing:border-box;
     padding:14mm 18mm;
     position:relative;
+    border-radius: var(--radius);
+    overflow:hidden;
   }
 
-  /* ===== TELA (FORMULÁRIO) ===== */
+  .folha::before{
+    content:"";
+    position:absolute;
+    inset:0;
+    background: radial-gradient(circle at 85% 30%, rgba(51,102,153,.08), transparent 55%);
+    pointer-events:none;
+  }
+
   .titulo-laudo{
     text-align:center;
     font-weight:800;
@@ -63,13 +51,17 @@
     margin: 8px 0 14px;
     text-transform:uppercase;
     font-family:"Arial Narrow", Arial, sans-serif;
+    position:relative;
+    z-index:1;
   }
 
   .painel{
     background:var(--panel);
     border: 2px solid #7aa4c7;
-    border-radius:6px;
+    border-radius:10px;
     padding:14px 14px 8px;
+    position:relative;
+    z-index:1;
   }
 
   .sec{
@@ -137,8 +129,10 @@
     margin-top:12px;
     background:#e9eff7;
     border: 2px dashed #9cb6cf;
-    border-radius:12px;
+    border-radius:14px;
     padding:12px;
+    position:relative;
+    z-index:1;
   }
   .obs-title{
     font-weight:900;
@@ -151,12 +145,38 @@
     min-height:110px;
     resize:vertical;
     padding:10px;
-    border-radius:10px;
+    border-radius:12px;
     border:1px solid #b6c7d8;
     font-family:"Arial Narrow", Arial, sans-serif;
     font-size:11pt;
     box-sizing:border-box;
   }
+
+  /* ===== CONTROLES ===== */
+  .controles{
+    position: static;
+    margin-top: 18px;
+    background:#fff;
+    border:1px solid #000;
+    padding:14px;
+    width: 100%;
+    max-width: 420px;
+    margin-left:auto;
+    margin-right:auto;
+    border-radius: 14px;
+    box-shadow: var(--shadow);
+  }
+  .btn{
+    width:100%;
+    padding:12px;
+    font-weight:900;
+    cursor:pointer;
+    border:none;
+    border-radius:10px;
+  }
+  .btn-print{ background:#28a745;color:#fff; }
+  .btn-word{ margin-top:10px;background:#1f6feb;color:#fff; }
+  .btn-clear{ margin-top:10px;background:#eee; }
 
   /* ===== PRINT ===== */
   .print-only{ display:none; }
@@ -167,7 +187,6 @@
     .no-print{ display:none !important; }
     .print-only{ display:block !important; }
 
-    /* ✅ Fundo timbrado fixo */
     .print-bg{
       position:fixed;
       inset:0;
@@ -182,20 +201,16 @@
       object-fit:cover;
     }
 
-    /* ✅ Conteúdo por cima do timbre (MANTIDO) */
     .print-page{
       position:relative;
       z-index:2;
       margin: 0;
-
-      /* ✅ SUAS ALTERAÇÕES MANTIDAS */
       padding: 50mm 18mm 22mm 18mm;
-
       box-sizing:border-box;
       font-family:"Arial Narrow", Arial, sans-serif;
     }
 
-    .folha{ box-shadow:none; width:auto; min-height:auto; padding:0; }
+    .folha{ box-shadow:none; width:auto; min-height:auto; padding:0; border-radius:0; }
 
     @page{ size:A4; margin:0; }
   }
@@ -230,12 +245,9 @@
     margin-top:10px;
     display:grid;
     grid-template-columns: 1.2fr 0.8fr;
-
-    /* ✅ SUAS ALTERAÇÕES MANTIDAS */
     gap: 6px 60px;
     font-family:"Arial Narrow";
     font-size:8pt;
-
     text-transform:uppercase;
     font-weight:400;
   }
@@ -263,7 +275,9 @@
   .tit-normal-caps{ font-weight:400; text-transform:uppercase; }
   .concl-resposta-bloco{ white-space:pre-line; font-weight:400; display:block; margin-top:2px; }
 
-  /* ✅ OBSERVAÇÃO NO PRINT: SÓ APARECE SE TIVER TEXTO */
+  /* ✅ OBSERVAÇÃO NO PRINT: corrigido para respeitar quebra de linha */
+  #obs_print{ white-space: pre-line; }
+
   #obs_print_wrap{ display:block; }
   #obs_print_wrap.vazio{ display:none; }
 
@@ -287,6 +301,7 @@
     <div class="titulo-laudo">LAUDO DO EXAME CITOPATOLÓGICO DO COLO DO ÚTERO</div>
 
     <div class="painel">
+      <!-- (seu conteúdo continua igual daqui pra baixo) -->
       <!-- 1 -->
       <div class="sec">
         <div class="sec-title">1. Avaliação Pré Analítica</div>
@@ -416,6 +431,7 @@
     </div>
 
     <div class="print-page">
+      <!-- (conteúdo print igual ao seu) -->
       <div class="cab-paciente">
         <div class="cab-row1">
           <div class="cab-left">
@@ -507,16 +523,16 @@
     void document.body.offsetHeight;
   }
 
+  /* ✅ CORRIGIDO: sem espaço extra e consistente */
   function setObsPrint(texto){
     const wrap = document.getElementById("obs_print_wrap");
     const el = document.getElementById("obs_print");
     if(!wrap || !el) return;
 
     const t = (texto||"").trim();
-
     if(t){
       wrap.classList.remove("vazio");
-      el.textContent = " " + t;
+      el.textContent = t;
     }else{
       wrap.classList.add("vazio");
       el.textContent = "";
@@ -560,10 +576,9 @@
     document.getElementById("data_coleta_print").textContent = init.data_coleta;
     document.getElementById("nome_resp_print").textContent = init.responsavel;
 
-    // ✅ Observação vem do sistema principal (se houver)
     const obsTela = document.getElementById("obs_texto_tela");
     if(obsTela){
-      obsTela.value = init.observacao || "";
+      if(!obsTela.value) obsTela.value = init.observacao || "";
       setObsPrint(obsTela.value);
     }else{
       setObsPrint(init.observacao || "");
@@ -577,6 +592,12 @@
   }
 
   preencherCabecalhoPrint();
+
+  /* ✅ GARANTE OBSERVAÇÃO ANTES DE IMPRIMIR (CORREÇÃO DEFINITIVA) */
+  window.addEventListener("beforeprint", () => {
+    const txt = document.getElementById("obs_texto_tela")?.value || init.observacao || "";
+    setObsPrint(txt);
+  });
 
   function atualizar(){
     const checksEpi = document.querySelectorAll('.epi:checked');
@@ -632,7 +653,7 @@
       elResConcl.textContent = "";
     }
 
-    // ✅ garante observação do textarea da tela
+    /* ✅ Sempre sincroniza OBS */
     setObsPrint(document.getElementById("obs_texto_tela")?.value || "");
 
     preencherCabecalhoPrint();
@@ -687,6 +708,7 @@
     const returnUrl = params.get("return");
     if(returnUrl){ window.location.href = returnUrl; return; }
     if(window.history.length > 1){ window.history.back(); return; }
+    window.close?.();
   }
 
   function imprimirLaudo(){
@@ -716,13 +738,15 @@
       }
     }catch(e){ console.error(e); }
 
+    /* ✅ GARANTE obs antes do print */
+    setObsPrint(document.getElementById("obs_texto_tela")?.value || init.observacao || "");
+
     forceReflow();
     setTimeout(() => {
       atualizar();
       forceReflow();
 
-      // ✅ GARANTE observação antes de imprimir
-      setObsPrint(document.getElementById("obs_texto_tela")?.value || "");
+      setObsPrint(document.getElementById("obs_texto_tela")?.value || init.observacao || "");
 
       window.print();
       setTimeout(() => { document.title = tituloOriginal; }, 1200);
@@ -732,9 +756,7 @@
 
   function buildWordHTML(){
     atualizar();
-
-    // ✅ GARANTE observação antes de Word
-    setObsPrint(document.getElementById("obs_texto_tela")?.value || "");
+    setObsPrint(document.getElementById("obs_texto_tela")?.value || init.observacao || "");
 
     const bloco = document.querySelector(".print-only .print-page");
     const clone = bloco.cloneNode(true);
@@ -744,6 +766,7 @@
 
   function baixarWordEVoltar(){
     atualizar();
+    setObsPrint(document.getElementById("obs_texto_tela")?.value || init.observacao || "");
 
     try{
       const concl = document.querySelector('input[name="c"]:checked');
@@ -759,9 +782,6 @@
         gerarArquivoExportacaoMes();
       }
     }catch(e){ console.error(e); }
-
-    // ✅ GARANTE observação antes de gerar Word
-    setObsPrint(document.getElementById("obs_texto_tela")?.value || "");
 
     const htmlWord = buildWordHTML();
     const doc =
@@ -781,7 +801,7 @@
     setTimeout(() => voltarSistema(), 700);
   }
 
-  // ✅ Ligação garantida do input no textarea
+  /* ✅ Ligação garantida do input no textarea */
   (function ativarObservacao(){
     const obs = document.getElementById("obs_texto_tela");
     if(!obs) return;
@@ -789,6 +809,7 @@
     obs.addEventListener("input", () => setObsPrint(obs.value));
 
     // aplica na inicialização
+    if(init.observacao && !obs.value) obs.value = init.observacao;
     setObsPrint(obs.value || init.observacao || "");
   })();
 
