--- a/laudo.html
+++ b/laudo.html
@@ -9,20 +9,71 @@
   :root{
     --blue:#336699;
     --panel:#eef2f7;
-    --shadow:0 18px 40px rgba(0,0,0,.18);
+    --ink:#0b1e2d;
+    --shadow:0 18px 50px rgba(0,0,0,.18);
     --radius:16px;
   }
 
   body{
     margin:0;
     padding:18px;
-    background:#f4f4f4;
+    background: linear-gradient(135deg, #e9f6ee 0%, #0a2a47 100%);
     font-family: Arial, sans-serif;
+    color:var(--ink);
   }
 
-  /* ============================
-     ✅ LAYOUT PREMIUM (SÓ TELA)
-     ============================ */
+  /* ✅ Header do laudo (TELA) */
+  .topbar{
+    max-width: 980px;
+    margin: 0 auto 14px;
+    padding: 14px 16px;
+    border-radius: var(--radius);
+    background: rgba(255,255,255,.14);
+    border:1px solid rgba(255,255,255,.20);
+    backdrop-filter: blur(10px);
+    box-shadow: var(--shadow);
+    color:#fff;
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+    gap:12px;
+  }
+  .topbar strong{
+    letter-spacing:.18em;
+    text-transform:uppercase;
+    font-size:13px;
+  }
+  .topbar span{
+    opacity:.9;
+    font-size:12px;
+  }
+
+  /* ===== CONTROLES ===== */
+  .controles{
+    margin-top: 18px;
+    background:#fff;
+    border:1px solid rgba(0,0,0,.25);
+    padding:14px;
+    width: 100%;
+    max-width: 420px;
+    margin-left:auto;
+    margin-right:auto;
+    border-radius: 14px;
+    box-shadow: var(--shadow);
+  }
+  .btn{
+    width:100%;
+    padding:12px;
+    font-weight:900;
+    cursor:pointer;
+    border:none;
+    border-radius:10px;
+  }
+  .btn-print{ background:#28a745;color:#fff; }
+  .btn-word{ margin-top:10px;background:#1f6feb;color:#fff; }
+  .btn-clear{ margin-top:10px;background:#eee; }
+
+  /* ===== FOLHA (TELA) ===== */
   .folha{
     width: 210mm;
     min-height: 297mm;
@@ -35,18 +86,18 @@
     border-radius: var(--radius);
     overflow:hidden;
   }
-
   .folha::before{
     content:"";
     position:absolute;
     inset:0;
-    background: radial-gradient(circle at 85% 30%, rgba(51,102,153,.08), transparent 55%);
+    background: radial-gradient(circle at 85% 20%, rgba(51,102,153,.08), transparent 60%);
     pointer-events:none;
   }
 
+  /* ===== TELA (FORMULÁRIO) ===== */
   .titulo-laudo{
     text-align:center;
-    font-weight:800;
+    font-weight:900;
     font-size:12pt;
     margin: 8px 0 14px;
     text-transform:uppercase;
@@ -152,31 +203,18 @@
     box-sizing:border-box;
   }
 
-  /* ===== CONTROLES ===== */
-  .controles{
-    position: static;
-    margin-top: 18px;
+  /* ✅ Preview na tela (debug visual para confirmar antes de imprimir) */
+  .obs-preview{
+    margin-top:10px;
+    padding:10px 12px;
     background:#fff;
-    border:1px solid #000;
-    padding:14px;
-    width: 100%;
-    max-width: 420px;
-    margin-left:auto;
-    margin-right:auto;
-    border-radius: 14px;
-    box-shadow: var(--shadow);
+    border-radius:12px;
+    border:1px solid rgba(0,0,0,.12);
+    font-family:"Arial Narrow", Arial, sans-serif;
+    display:none;
   }
-  .btn{
-    width:100%;
-    padding:12px;
-    font-weight:900;
-    cursor:pointer;
-    border:none;
-    border-radius:10px;
-  }
-  .btn-print{ background:#28a745;color:#fff; }
-  .btn-word{ margin-top:10px;background:#1f6feb;color:#fff; }
-  .btn-clear{ margin-top:10px;background:#eee; }
+  .obs-preview.show{ display:block; }
+  .obs-preview b{ text-transform:uppercase; }
 
   /* ===== PRINT ===== */
   .print-only{ display:none; }
@@ -275,9 +313,8 @@
   .tit-normal-caps{ font-weight:400; text-transform:uppercase; }
   .concl-resposta-bloco{ white-space:pre-line; font-weight:400; display:block; margin-top:2px; }
 
-  /* ✅ OBSERVAÇÃO NO PRINT: corrigido para respeitar quebra de linha */
+  /* ✅ Observação no print */
   #obs_print{ white-space: pre-line; }
-
   #obs_print_wrap{ display:block; }
   #obs_print_wrap.vazio{ display:none; }
 
@@ -292,6 +329,16 @@
 
 <body>
 
+<div class="topbar no-print">
+  <div>
+    <strong>LAUDO • SESC</strong><br>
+    <span>Interface premium do laudo (não altera impressão)</span>
+  </div>
+  <div style="opacity:.9;font-size:12px;">
+    Versão: <b>FINAL FIX OBS</b>
+  </div>
+</div>
+
 <div class="folha">
 
   <!-- =========================
@@ -301,7 +348,6 @@
     <div class="titulo-laudo">LAUDO DO EXAME CITOPATOLÓGICO DO COLO DO ÚTERO</div>
 
     <div class="painel">
-      <!-- (seu conteúdo continua igual daqui pra baixo) -->
       <!-- 1 -->
       <div class="sec">
         <div class="sec-title">1. Avaliação Pré Analítica</div>
@@ -419,6 +465,12 @@
       </div>
 
       <textarea id="obs_texto_tela" placeholder="Caso necessário, digite a observação aqui..."></textarea>
+
+      <!-- ✅ preview para confirmar que está sincronizando -->
+      <div id="obs_preview" class="obs-preview">
+        <b>Observação (preview):</b>
+        <span id="obs_preview_txt"></span>
+      </div>
     </div>
   </div>
 
@@ -431,7 +483,6 @@
     </div>
 
     <div class="print-page">
-      <!-- (conteúdo print igual ao seu) -->
       <div class="cab-paciente">
         <div class="cab-row1">
           <div class="cab-left">
@@ -523,19 +574,30 @@
     void document.body.offsetHeight;
   }
 
-  /* ✅ CORRIGIDO: sem espaço extra e consistente */
-  function setObsPrint(texto){
+  /* ✅ SYNC DEFINITIVA DA OBSERVAÇÃO (print + preview) */
+  function syncObservacao(){
+    const txt = (document.getElementById("obs_texto_tela")?.value || "").trim();
+
     const wrap = document.getElementById("obs_print_wrap");
     const el = document.getElementById("obs_print");
-    if(!wrap || !el) return;
+    const prev = document.getElementById("obs_preview");
+    const prevTxt = document.getElementById("obs_preview_txt");
 
-    const t = (texto||"").trim();
-    if(t){
-      wrap.classList.remove("vazio");
-      el.textContent = t;
-    }else{
-      wrap.classList.add("vazio");
-      el.textContent = "";
+    if(el) el.textContent = txt;
+
+    if(wrap){
+      if(txt) wrap.classList.remove("vazio");
+      else wrap.classList.add("vazio");
+    }
+
+    if(prev && prevTxt){
+      if(txt){
+        prev.classList.add("show");
+        prevTxt.textContent = " " + txt;
+      }else{
+        prev.classList.remove("show");
+        prevTxt.textContent = "";
+      }
     }
   }
 
@@ -543,7 +605,7 @@
     const obs = document.getElementById("obs_texto_tela");
     if(!obs) return;
     obs.value = txt;
-    setObsPrint(txt);
+    syncObservacao();   // ✅ atualiza na hora
   }
 
   const params = new URLSearchParams(window.location.search);
@@ -576,28 +638,13 @@
     document.getElementById("data_coleta_print").textContent = init.data_coleta;
     document.getElementById("nome_resp_print").textContent = init.responsavel;
 
-    const obsTela = document.getElementById("obs_texto_tela");
-    if(obsTela){
-      if(!obsTela.value) obsTela.value = init.observacao || "";
-      setObsPrint(obsTela.value);
-    }else{
-      setObsPrint(init.observacao || "");
-    }
-
     const now = new Date();
     const dia = now.getDate();
     const mes = now.toLocaleDateString("pt-BR",{month:"long"});
     const ano = now.getFullYear();
     document.getElementById("rodape_data").textContent = `João Pessoa, ${dia} de ${mes} de ${ano}`;
   }
-
   preencherCabecalhoPrint();
-
-  /* ✅ GARANTE OBSERVAÇÃO ANTES DE IMPRIMIR (CORREÇÃO DEFINITIVA) */
-  window.addEventListener("beforeprint", () => {
-    const txt = document.getElementById("obs_texto_tela")?.value || init.observacao || "";
-    setObsPrint(txt);
-  });
 
   function atualizar(){
     const checksEpi = document.querySelectorAll('.epi:checked');
@@ -653,13 +700,11 @@
       elResConcl.textContent = "";
     }
 
-    /* ✅ Sempre sincroniza OBS */
-    setObsPrint(document.getElementById("obs_texto_tela")?.value || "");
-
     preencherCabecalhoPrint();
+    syncObservacao(); // ✅ SEMPRE sincroniza
   }
 
-  /* ===== Exportação no padrão do sistema ===== */
+  /* ✅ Exportação no padrão do sistema */
   function mesChaveAtual(){
     const now = new Date();
     const yyyy = now.getFullYear();
@@ -712,14 +757,20 @@
   }
 
   function imprimirLaudo(){
+    // ✅ FORÇA TUDO ficar pronto
     atualizar();
+    syncObservacao();
+
+    // ✅ dupla garantia
+    forceReflow();
+    syncObservacao();
+    forceReflow();
 
     const sugerido = nomeArquivoSugerido();
     const digitado = prompt("Nome do arquivo (PDF):", sugerido);
     if(digitado === null) return;
 
     const nomeFinal = (digitado || sugerido).trim() || sugerido;
-
     const tituloOriginal = document.title;
     document.title = nomeFinal;
 
@@ -738,25 +789,18 @@
       }
     }catch(e){ console.error(e); }
 
-    /* ✅ GARANTE obs antes do print */
-    setObsPrint(document.getElementById("obs_texto_tela")?.value || init.observacao || "");
-
-    forceReflow();
+    // ✅ imprime após sincronizar
     setTimeout(() => {
-      atualizar();
-      forceReflow();
-
-      setObsPrint(document.getElementById("obs_texto_tela")?.value || init.observacao || "");
-
+      syncObservacao();
       window.print();
       setTimeout(() => { document.title = tituloOriginal; }, 1200);
       setTimeout(() => voltarSistema(), 700);
-    }, 180);
+    }, 120);
   }
 
   function buildWordHTML(){
     atualizar();
-    setObsPrint(document.getElementById("obs_texto_tela")?.value || init.observacao || "");
+    syncObservacao();
 
     const bloco = document.querySelector(".print-only .print-page");
     const clone = bloco.cloneNode(true);
@@ -766,7 +810,7 @@
 
   function baixarWordEVoltar(){
     atualizar();
-    setObsPrint(document.getElementById("obs_texto_tela")?.value || init.observacao || "");
+    syncObservacao();
 
     try{
       const concl = document.querySelector('input[name="c"]:checked');
@@ -801,17 +845,24 @@
     setTimeout(() => voltarSistema(), 700);
   }
 
-  /* ✅ Ligação garantida do input no textarea */
-  (function ativarObservacao(){
+  // ✅ ligações e init
+  (function initObs(){
     const obs = document.getElementById("obs_texto_tela");
     if(!obs) return;
 
-    obs.addEventListener("input", () => setObsPrint(obs.value));
-
-    // aplica na inicialização
+    // preenche do sistema principal
     if(init.observacao && !obs.value) obs.value = init.observacao;
-    setObsPrint(obs.value || init.observacao || "");
+
+    obs.addEventListener("input", () => {
+      syncObservacao();
+    });
+
+    // primeiro sync
+    syncObservacao();
   })();
+
+  // inicializa
+  atualizar();
 
   window.atualizar = atualizar;
 </script>
